--- a/brain-games/package.json
+++ b/brain-games/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yo-brain-games",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "",
   "main": "dist/index.js",
   "bin": {
@@ -27,5 +27,8 @@
     "babel-core": "*",
     "babel-preset-env": "*",
     "babel-preset-stage-0": "*"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.7"
   }
 }
