--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "engines": {
     "node": "8"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel-node": "babel-node",
